# database

./: Cargo.toml  README.md
.github/workflows/: test.yml
database_macro/: Cargo.toml
database_macro/src/: attributes.rs  content_impl.rs  database_impl.rs  derive_database.rs  derive_subset.rs  dromedar_case.rs  enum_impl.rs  lib.rs  subscriber_handler_impl.rs
example/: Cargo.toml
example/src/: alice_and_bob_subscriber.rs  bob_and_debbie_subscriber.rs  database_content.rs  main.rs
src/: content.rs  database.rs  database_error.rs  lib.rs  subscriber_handler.rs  subset.rs
src/tests/: macro_implementation.rs  manual_implementation.rs  mod.rs  tests.rs
